--- a/projeto2/algafood-api/src/main/resources/application.properties
+++ b/projeto2/algafood-api/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=qwerty
+
+spring.jpa.generate-dll=true
+spring.jpa.hibernate.ddl-auto = create
+
