--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-.metadata/
-metadata/
+!.metadata/
+.metadata/*
+!.metadata/.plugins/
+.metadata/.plugins/*
+!.metadata/.plugins/org.eclipse.m2e.logback.configuration/
+.metadata/.plugins/org.eclipse.m2e.logback.configuration/*
+.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
+
