--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 .metadata/.plugins/*
 !.metadata/.plugins/org.eclipse.m2e.logback.configuration/
 .metadata/.plugins/org.eclipse.m2e.logback.configuration/*
-.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
+!.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
 
