--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-!.metadata/
-.metadata/*
-!.metadata/.plugins/
-.metadata/.plugins/*
-!.metadata/.plugins/org.eclipse.m2e.logback.configuration/
-.metadata/.plugins/org.eclipse.m2e.logback.configuration/*
-!.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
+.metadata/
+#!.metadata/
+#.metadata/*
+#!.metadata/.plugins/
+#.metadata/.plugins/*
+#!.metadata/.plugins/org.eclipse.m2e.logback.configuration/
+#.metadata/.plugins/org.eclipse.m2e.logback.configuration/*
+#!.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
 
