--- a/projeto4/algafood-api/bin/src/main/resources/application.properties
+++ b/projeto4/algafood-api/bin/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=qwerty
 
-spring.jpa.generate-ddl=true
+spring.jpa.generate-dll=true
 spring.jpa.hibernate.ddl-auto = create
 
 spring.jpa.show-sql=true
