--- a/project-api/pom.xml
+++ b/project-api/pom.xml
@@ -69,6 +69,9 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<layers>
+						<enabled>true</enabled>
+					</layers>
 				</configuration>
 			</plugin>
 		</plugins>
